update: logic result no required